# library_shelf

./: .pre-commit-config.yaml  app.py  books.py  books.yaml  config.py  lib_shelf.db  models.py  pyproject.toml  uloha.txt
templates/: home.html
