[tool.poetry]
name = "library-shelf"
version = "0.1.0"
description = ""
authors = ["neurobrko <elvis@elvis.sk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
sqlalchemy = "^2.0.34"
connexion = {extras = ["flask", "swagger-ui", "uvicorn"], version = "^3.1.0"}
flask-marshmallow = {extras = ["sqlalchemy"], version = "^1.2.1"}
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
